kubernetes/apps/database/emqx/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  hostnames:
    - emqx.franta.us
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          namespace: database
          port: 18083
      matches:
        - path:
            type: PathPrefix
            value: /
